test/spec_vectors/func/fail/module_37.wat
(module (func $type-return-last-empty-vs-num (result i32) (return)))